@@ -6,8 +6,9 @@ XSBC-Original-Maintainer: Openstack Maintainers <openstack@lists.launchpad.net>
 Uploaders: Soren Hansen <soren@ubuntu.com>, Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 7.0.50),
  python-m2crypto,
- python-all
-Build-Depends-Indep: python-support,
+ python-all (>= 2.6),
+ python-all-dev (>= 2.6.6-3~) | python-support,
+Build-Depends-Indep:
  python-setuptools,
  python-sphinx (>> 1.0),
  python-distutils-extra,
